# wxlib

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md
matchit/: CMakeLists.txt  README.md  matchit.hpp  matchit_test.cpp  matchit_test_utility.hpp
matchit/doc/: From-Pattern-Matching-Proposal-to-matchit.md  From-Rust-to-matchit.md  REFERENCE.md
matchit/sample/: CMakeLists.txt  matchit_sample_at_bindings.cpp  matchit_sample_check_and_log_large.cpp  matchit_sample_clip.cpp  matchit_sample_closed_class_hierarchy.cpp  matchit_sample_conditional_if_let_exprs.cpp  matchit_sample_contains.cpp  matchit_sample_custom_as_pointer.cpp  matchit_sample_custom_ds.cpp  matchit_sample_dereference_pattern.cpp  matchit_sample_detect_tuple.cpp  matchit_sample_ds_enums.cpp  matchit_sample_ds_nested_structs_and_enums.cpp  matchit_sample_eval.cpp  matchit_sample_eval_expr_trees.cpp  matchit_sample_extra_conditionals.cpp  matchit_sample_extractor_pattern.cpp  matchit_sample_factorial.cpp  matchit_sample_gcd.cpp  matchit_sample_get_class_name.cpp  matchit_sample_graph.cpp  matchit_sample_identifier_pattern.cpp  matchit_sample_ignoring_parts_of_a_value.cpp  matchit_sample_is_large.cpp  matchit_sample_is_valid.cpp  matchit_sample_literal_pattern.cpp  matchit_sample_matching_integrals.cpp  matchit_sample_matching_polymorphic_types.cpp  matchit_sample_matching_strings.cpp  matchit_sample_matching_tuples.cpp  matchit_sample_matching_variants.cpp  matchit_sample_matching_within.cpp  matchit_sample_optional_lift.cpp  matchit_sample_predicate_based_discriminator.cpp  matchit_sample_quotient_remainder.cpp  matchit_sample_range_pattern.cpp  matchit_sample_rbtree_rebalancing.cpp  matchit_sample_reference_pattern.cpp  matchit_sample_relu.cpp  matchit_sample_rest_pattern.cpp  (+12 more)
meta_enum/: CMakeLists.txt  README.md  meta_enum.hpp  meta_enum_test.cpp
mio/: CMakeLists.txt  README.md  csvdoc.hpp  fastfind.hpp  mio.hpp  mio_test.cpp  stringreader.hpp
msgpack/: CMakeLists.txt  README.md  msgpack.hpp  msgpack_test.cpp
semimap/: CMakeLists.txt  README.md  semimap.hpp  semimap_test.cpp
